# PandasEngine4Excel

./: pyproject.toml
.streamlit/: config.toml
excelsior/: app.py  auth.py  data_processing.py  fastapi_wrapper.py  session_management.py  utils.py
excelsior/resources/: query_engine.py
excelsior/services/: data_service.py  fastapi_session.py  llm_service.py  query_service.py  s3_service.py
excelsior/telemetry/: setup_telemetry.py
excelsior/ui/: data_ui.py  query_ui.py
